# Siv4

./: .gitignore  CMakeLists.txt  README.md  field class using dynamic arrays.cpp  main.cpp
configurations/: interference  interference.txt  reflecting_walls  reflecting_walls.txt  resonator_maybe  resonator_maybe.txt  three-slit_diffraction  three-slit_diffraction.txt  two-slit_diffraction  two-slit_diffraction.txt
include/: boundary.hpp  boundary.tpp  errors.hpp  field_class.hpp  field_class.tpp  simulation.hpp  simulation.tpp
include/source/: errors.cpp  field_class.cpp  simulation.cpp
